# ai-ferm

./: platformio.ini
data/: pr.txt
server/: CMakeLists.txt  README.md  init_db.sql  main.cpp
server/train/: train.sh  train_autoencoder.py
server/web/: app.py  requirements.txt  run.sh
server/web/templates/: index.html
src/: autoencoder.h  main.cpp  model_autoencoder.h
